--- a/parcial-2/src/main/resources/public/templates/usuariosLista.html
+++ b/parcial-2/src/main/resources/public/templates/usuariosLista.html
@@ -16,9 +16,7 @@
     <div id="layoutSidenav_content">
         <main>
                     <h1 class="mt-4">Usuarios</h1>
-                    <a class="nav-link" href="/index.html">
-                        Home
-                    </a>
+                     <a class="btn btn-primary" href="/index.html">Home</a>
                     <ol class="breadcrumb mb-4">
                         <li class="breadcrumb-item active">Lista de Usuarios</li>
                     </ol>
